# HSEC-HW

tasks/admission/: admission.cpp
tasks/archiver/src/: CMakeLists.txt  archiver.cpp  init.h  my_tests.h
tasks/archiver/src/CLA/: cla_parser.cpp  cla_parser.h
tasks/archiver/src/Exceptions/: exceptions.h
tasks/archiver/src/Huffman/: decoder.cpp  decoder.h  encoder.cpp  encoder.h  huffman.cpp  huffman.h
tasks/archiver/src/IO/: reader.cpp  reader.h  writer.cpp  writer.h
tasks/archiver/src/Symbol/: symbol.cpp  symbol.h
tasks/associative_operation/: associative_operation.cpp  test.cpp
tasks/mines/: minesweeper.cpp  minesweeper.h
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp  test.cpp
tasks/poly/: poly.cpp  poly.h
tasks/robot/: checkers_topology.cpp  checkers_topology.h  knight_topology.cpp  knight_topology.h  overflow_topology.h  planar_topology.cpp  planar_topology.h  point.h  robot.cpp  test.cpp  topology.cpp  topology.h  world.cpp  world.h
tasks/scorer/: scorer.cpp
tasks/scorer2/: scorer.cpp  scorer.h
tasks/search/: search.cpp  test.cpp
tasks/search2/: search.cpp  search.h
tasks/sort_students/: sort_students.cpp
tasks/tests_checking/: tests_checking.cpp
tasks/unixpath/: test.cpp  unixpath.cpp
tasks/unixpath2/: unixpath.cpp  unixpath.h
tasks/vector/: test.cpp  vector.cpp  vector.h
tasks/word2vec/: word2vec.cpp
tasks/zip/: test.cpp  zip.cpp  zip.h
tasks/zip2/: zip.h
