add_executable(
        archiver
        archiver.cpp
        CLA/cla_parser.h
        CLA/cla_parser.cpp)
#        init.h IO/reader.h IO/writer.h Huffman/huffman.h Huffman/encoder.h Huffman/decoder.h Symbol/symbol.h Huffman/encoder.cpp Symbol/symbol.cpp CLA/cla_parser.h CLA/cla_parser.cpp Exceptions/exceptions.h Huffman/huffman.cpp IO/reader.cpp IO/writer.cpp)
